--- a/src/loading.css
+++ b/src/loading.css
@@ -1,8 +1,8 @@
 .backdrop {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
